--- a/applications/timesheets-server/src/test/resources/application.properties
+++ b/applications/timesheets-server/src/test/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=timesheets-server
 
 server.port=8181
 registration.server.endpoint=http://localhost:8883
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
