--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=timesheets-server
 server.port=8084
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
+
+# requests that take more than 5 seconds will "fail fast":
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+
+# set the threshold to two failures for tripping the circuit:
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
