Create config server

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,5 @@ include "components:users"
 include "components:rest-support"
 include "components:test-support"
 
+include "platform-services:config-server"
+
