--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -11,6 +11,7 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.cloud:spring-cloud-starter-config"
 
     testCompile project(":components:test-support")
 }
