start for hystrix isolation strategy

--- a/applications/registration-server/build.gradle
+++ b/applications/registration-server/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     compile project(":components:accounts")
     compile project(":components:projects")
     compile project(":components:users")
+    compile project(":components:instrumentation")
 }
