--- a/components/projects/build.gradle
+++ b/components/projects/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     compile project(":components:rest-support")
-
+    compile project(":components:instrumentation")
     testCompile project(":components:test-support")
 }
