--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include "components:accounts"
 include "components:projects"
 include "components:timesheets"
 include "components:users"
+include "components:instrumentation"
 
 include "components:rest-support"
 include "components:test-support"
