--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=registration-server
 
 server.port=8083
-registration.server.endpoint=http://localhost:8083
+registration.server.latency.ms=100
 management.security.enabled=false
