--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -4,8 +4,13 @@ server.port=8084
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
 
+## Hystrix Configuration
+#hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+
 # requests that take more than 5 seconds will "fail fast":
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
 
 # set the threshold to two failures for tripping the circuit:
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
+
+
