--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,4 @@ include "components:users"
 
 include "components:rest-support"
 include "components:test-support"
-
+include "platform-services:hystrix-dashboard"
