--- a/applications/timesheets-server/build.gradle
+++ b/applications/timesheets-server/build.gradle
@@ -1,5 +1,7 @@
 apply from: "$projectDir/../server.gradle"
 
 dependencies {
+    compile "org.springframework.cloud:spring-cloud-starter-hystrix"
     compile project(":components:timesheets")
+    
 }
