Hystrix Isolation Strategies, falta la parte de client https://courses.education.pivotal.io/c/349802635/spring-cloud-developer/circuit-breaker/isolation-strategy.html

--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=registration-server
 
 server.port=8083
-registration.server.latency.ms=100
+registration.server.latency.ms=1000000
 management.security.enabled=false
