--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -5,12 +5,10 @@ registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
 
 ## Hystrix Configuration
-#hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 
 # requests that take more than 5 seconds will "fail fast":
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
 
 # set the threshold to two failures for tripping the circuit:
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
-
-
