2. Commit your change. falta resto de puntos and test

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name = "pal-tracker-distributed"
 
 include "applications:registration-server"
 include "applications:timesheets-server"
-
+include "platform-services:config-server"
 include "components:accounts"
 include "components:projects"
 include "components:timesheets"
