--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -12,6 +12,6 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.cloud:spring-cloud-starter-config"
-
+    compile "org.springframework.cloud:spring-cloud-starter-bus-amqp"
     testCompile project(":components:test-support")
 }
