--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8084
+logging.level.com.netflix=DEBUG
+spring.rabbitmq.port=5672
+spring.rabbitmq.password=password
+spring.rabbitmq.username=user
