--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=registration-server
 server.port=8083
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
+
+security.oauth2.client.client-id=${spring.application.name}
+security.oauth2.client.client-secret=secret
+security.oauth2.resource.token-info-uri=http://localhost:8080/oauth/check_token
