--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.application.name=timesheets-server
 server.port=8084
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
+
+
+security.oauth2.client.grant-type=client_credentials
+security.oauth2.client.access-token-uri=http://localhost:8080/oauth/token
+security.oauth2.client.client-id=${spring.application.name}
+security.oauth2.client.client-secret=secret
+security.oauth2.client.scope=project.read
+
+security.basic.enabled=false
