--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -11,6 +11,6 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
-
-    testCompile project(":components:test-support")
+    compile "org.springframework.cloud:spring-cloud-starter-oauth2"
+   // testCompile project(":components:test-support")
 }
